[gd_scene load_steps=2 format=3 uid="uid://cwfxrgfsmemwg"]

[ext_resource type="Script" path="res://addons/AdaptiSound/DEMO/Scenes/AdaptiveScene.gd" id="1_mbxp4"]

[node name="AdaptiveTrack" type="Node2D"]
script = ExtResource("1_mbxp4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.203922, 0.219608, 1)

[node name="Tittle" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "AdaptiveTrack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play Track 1"

[node name="Loops" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Loop1" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops"]
layout_mode = 2

[node name="Loop1" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop1"]
layout_mode = 2
size_flags_vertical = 3
text = "Loop1"

[node name="Loop2" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops"]
layout_mode = 2

[node name="Loop2" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop2"]
layout_mode = 2
size_flags_vertical = 3
text = "Loop2"

[node name="Loop3" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops"]
layout_mode = 2

[node name="Loop3" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop3"]
layout_mode = 2
text = "Loop3"

[node name="Layer1" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop3"]
layout_mode = 2
text = "Layer1"

[node name="Layer2" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop3"]
layout_mode = 2
text = "Layer2"

[node name="Layer3" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop3"]
layout_mode = 2
text = "Layer3"

[node name="Outro" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Outro"

[node name="Stop" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Stop"

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_right = 192.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer2"]
layout_mode = 2

[node name="PlayTrack2" type="Button" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Play Track 1"

[node name="Loops" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Loop1" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops"]
layout_mode = 2

[node name="Loop1" type="Button" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops/Loop1"]
layout_mode = 2
size_flags_vertical = 3
text = "Loop1"

[node name="Loop2" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops"]
layout_mode = 2

[node name="Loop2" type="Button" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops/Loop2"]
layout_mode = 2
size_flags_vertical = 3
text = "Loop2"

[node name="Loop3" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops"]
layout_mode = 2

[node name="Loop3" type="Button" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops/Loop3"]
layout_mode = 2
text = "Loop3"

[node name="Layer1" type="CheckButton" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops/Loop3"]
layout_mode = 2
text = "Layer1"

[node name="Layer2" type="CheckButton" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops/Loop3"]
layout_mode = 2
text = "Layer2"

[node name="Layer3" type="CheckButton" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops/Loop3"]
layout_mode = 2
text = "Layer3"

[node name="Outro" type="Button" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer"]
visible = false
layout_mode = 2
text = "Outro"

[node name="Stop" type="Button" parent="CanvasLayer/Control/CenterContainer2/VBoxContainer"]
visible = false
layout_mode = 2
text = "Stop"

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop1/Loop1" to="." method="_on_loop_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop2/Loop2" to="." method="_on_loop_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop3/Loop3" to="." method="_on_loop_3_pressed"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop3/Layer1" to="." method="_on_layer_1_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop3/Layer2" to="." method="_on_layer_2_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Loops/Loop3/Layer3" to="." method="_on_layer_3_toggled"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Outro" to="." method="_on_outro_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer2/VBoxContainer/PlayTrack2" to="." method="_on_play_track_2_pressed"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops/Loop3/Layer2" to="." method="_on_layer_2_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer2/VBoxContainer/Loops/Loop3/Layer3" to="." method="_on_layer_3_toggled"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer2/VBoxContainer/Outro" to="." method="_on_outro_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer2/VBoxContainer/Stop" to="." method="_on_stop_pressed"]
